Fixed textarea overflow

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -24,7 +24,7 @@ textarea {
 	margin-top: 20px;
 	resize: none;
 	white-space: pre;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 html {
